--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         dotnet-version: 3.1.101
     - name: Install dependencies
-      run: dotnet restore
+      run: dotnet restore src/Example/Example.csproj 
     - name: Build
       run: dotnet build src/Example/Example.csproj --configuration Release --no-restore
     - name: Test
