--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -22,4 +22,4 @@ jobs:
     - name: Build
       run: dotnet build src/Example/Example.csproj --configuration Release --no-restore
     - name: Test
-      run: dotnet test test/ExampleTests/ExampleTests.csproj --no-restore --verbosity normal
+      run: dotnet test test/ExampleTests/ExampleTests.csproj
